added UAC elevation for sample applications (MSVC/DDK only)
also added .rc for setdrv.exe, required for UAC elevation
along with manifest files

--- a/examples/setdrv_2008.vcproj
+++ b/examples/setdrv_2008.vcproj
@@ -68,6 +68,7 @@
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=""
+				UACExecutionLevel="2"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(ProjectName).pdb"
 				SubSystem="1"
@@ -145,6 +146,7 @@
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=""
+				UACExecutionLevel="2"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(TargetDir)$(ProjectName).pdb"
 				SubSystem="1"
@@ -222,6 +224,7 @@
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=""
+				UACExecutionLevel="2"
 				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -301,6 +304,7 @@
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories=""
+				UACExecutionLevel="2"
 				GenerateDebugInformation="false"
 				SubSystem="1"
 				OptimizeReferences="2"
