--- a/examples/setdrv_gui_2008.vcproj
+++ b/examples/setdrv_gui_2008.vcproj
@@ -67,6 +67,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="2"
+				UACExecutionLevel="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -142,6 +143,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="2"
+				UACExecutionLevel="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="17"
@@ -217,6 +219,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="1"
+				UACExecutionLevel="2"
 				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
@@ -295,6 +298,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
 				LinkIncremental="1"
+				UACExecutionLevel="2"
 				GenerateDebugInformation="false"
 				SubSystem="2"
 				OptimizeReferences="2"
