added app icon for setdrv_gui.exe

--- a/examples/setdrv_gui_2008.vcproj
+++ b/examples/setdrv_gui_2008.vcproj
@@ -361,6 +361,10 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\icon1.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\setdrv_gui.rc"
 				>
 			</File>
