changed log control from listbox to edit (allows copy)

--- a/examples/setdrv_gui_2008.vcproj
+++ b/examples/setdrv_gui_2008.vcproj
@@ -296,7 +296,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="setupapi.lib newdev.lib"
+				AdditionalDependencies="setupapi.lib newdev.lib dwmapi.lib"
 				LinkIncremental="1"
 				UACExecutionLevel="2"
 				GenerateDebugInformation="false"
