--- a/examples/setdrv_gui.rc
+++ b/examples/setdrv_gui.rc
@@ -32,9 +32,7 @@ EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE | WS_EX_APPWINDOW
 CAPTION "WDI SetDrv GUI"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    COMBOBOX        IDC_DEVICELIST,17,31,273,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
     GROUPBOX        "Info",IDC_STATIC,8,148,399,125
-    LISTBOX         IDC_INFO,20,160,377,102,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
     GROUPBOX        "USB Device",IDC_STATIC,7,8,400,128
     EDITTEXT        IDC_VID,292,31,27,14,ES_UPPERCASE | WS_DISABLED
     EDITTEXT        IDC_PID,320,31,27,14,ES_UPPERCASE | WS_DISABLED
@@ -52,6 +50,8 @@ BEGIN
     LTEXT           "MI:",IDC_STATIC,352,21,12,8
     EDITTEXT        IDC_MI,348,31,16,14,ES_UPPERCASE | WS_DISABLED
     PUSHBUTTON      "Browse",IDC_BROWSE,315,68,50,14
+    COMBOBOX        IDC_DEVICELIST,17,31,273,88,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_INFO,13,158,388,110,ES_MULTILINE | ES_READONLY | WS_VSCROLL
 END
 
 
@@ -101,7 +101,7 @@ END
 //
 
 #ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO
+GUIDELINES DESIGNINFO 
 BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
@@ -129,18 +129,18 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_EIRE
 // TEXTINCLUDE
 //
 
-1 TEXTINCLUDE
+1 TEXTINCLUDE 
 BEGIN
     "resource.h\0"
 END
 
-2 TEXTINCLUDE
+2 TEXTINCLUDE 
 BEGIN
     "#include ""afxres.h""\r\n"
     "\0"
 END
 
-3 TEXTINCLUDE
+3 TEXTINCLUDE 
 BEGIN
     "\r\n"
     "\0"
