added dynamic width to device dropdown list

--- a/examples/setdrv_gui.rc
+++ b/examples/setdrv_gui.rc
@@ -50,7 +50,7 @@ BEGIN
     LTEXT           "MI:",IDC_STATIC,352,21,12,8
     EDITTEXT        IDC_MI,348,31,16,14,ES_UPPERCASE | WS_DISABLED
     PUSHBUTTON      "Browse",IDC_BROWSE,315,68,50,14
-    COMBOBOX        IDC_DEVICELIST,17,31,273,88,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_DEVICELIST,17,31,273,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
     EDITTEXT        IDC_INFO,13,158,388,110,ES_MULTILINE | ES_READONLY | WS_VSCROLL
 END
 
