--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -29,7 +29,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_NEUTRAL
 MAIN_DIALOG DIALOGEX 0, 0, 417, 278
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
-CAPTION "WDI SetDrv GUI"
+CAPTION "Zadig"
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
     GROUPBOX        "Info",IDC_STATIC,8,148,399,125
@@ -78,13 +78,13 @@ BEGIN
         BLOCK "000904b0"
         BEGIN
             VALUE "CompanyName", "libusb.org"
-            VALUE "FileDescription", "SetDrv GUI Application"
+            VALUE "FileDescription", "Zadig Application"
             VALUE "FileVersion", "1, 0, 0, 1"
-            VALUE "InternalName", "setdrv_gui"
+            VALUE "InternalName", "zadig"
             VALUE "LegalCopyright", "See individual source files, GNU LGPL v2.1 or later."
             VALUE "LegalTrademarks", "http://www.gnu.org/licenses/lgpl-2.1.html"
-            VALUE "OriginalFilename", "setdrv_gui.exe"
-            VALUE "ProductName", "setdrv_gui"
+            VALUE "OriginalFilename", "zadig.exe"
+            VALUE "ProductName", "zadig"
             VALUE "ProductVersion", "1, 0, 0, 1"
         END
     END
