--- a/libwdi/libwdi_dll_2008.vcproj
+++ b/libwdi/libwdi_dll_2008.vcproj
@@ -2,10 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="zadig"
-	ProjectGUID="{F7F7842F-2912-454E-ADF5-0B22987946E2}"
-	RootNamespace="zadig"
-	Keyword="Win32Proj"
+	Name="libwdi (dll)"
+	ProjectGUID="{79275348-41A4-4D07-8990-4068C9594A2C}"
+	RootNamespace="libwdi"
 	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
@@ -21,14 +20,15 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\examples"
-			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\examples\$(ProjectName)"
-			ConfigurationType="1"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\dll"
+			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\dll\libwdi"
+			ConfigurationType="2"
 			CharacterSet="2"
-			BuildLogFile="$(IntDir)\$(ProjectName).htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Embedding binary resources"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -45,12 +45,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS"
+				AdditionalIncludeDirectories="..\msvc"
+				PreprocessorDefinitions="_WIN32;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
-				UsePrecompiledHeader="0"
+				RuntimeLibrary="3"
 				WarningLevel="3"
 				DebugInformationFormat="4"
 			/>
@@ -59,6 +58,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				AdditionalIncludeDirectories="E:\WinDDK\7600.16385.0"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -66,11 +66,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
-				LinkIncremental="2"
-				UACExecutionLevel="1"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				TargetMachine="1"
+				OutputFile="$(OutDir)\libwdi.dll"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -96,14 +92,14 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|x64"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\examples"
-			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\examples\$(ProjectName)"
-			ConfigurationType="1"
-			CharacterSet="2"
-			BuildLogFile="$(IntDir)\$(ProjectName).htm"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\dll"
+			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\dll\libwdi"
+			ConfigurationType="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Embedding binary resources"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -116,25 +112,19 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				TargetEnvironment="3"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				DebugInformationFormat="3"
+				AdditionalIncludeDirectories="..\msvc"
+				PreprocessorDefinitions="_WIN32;_WIN64;_LIB;_CRT_SECURE_NO_WARNINGS"
+				RuntimeLibrary="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				AdditionalIncludeDirectories="E:\WinDDK\7600.16385.0"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -142,11 +132,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
-				LinkIncremental="2"
-				UACExecutionLevel="1"
-				GenerateDebugInformation="true"
-				SubSystem="2"
-				TargetMachine="17"
+				OutputFile="$(OutDir)\libwdi.dll"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -172,15 +158,16 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\examples"
-			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\examples\$(ProjectName)"
-			ConfigurationType="1"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\dll"
+			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\dll\libwdi"
+			ConfigurationType="2"
 			CharacterSet="2"
 			WholeProgramOptimization="1"
-			BuildLogFile="$(IntDir)\$(ProjectName).htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Embedding binary resources"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -198,11 +185,10 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS"
-				RuntimeLibrary="0"
+				AdditionalIncludeDirectories="..\msvc"
+				PreprocessorDefinitions="_WIN32;_LIB;_CRT_SECURE_NO_WARNINGS"
+				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
@@ -211,6 +197,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				AdditionalIncludeDirectories="E:\WinDDK\7600.16385.0"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -218,13 +205,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
-				LinkIncremental="1"
-				UACExecutionLevel="1"
-				GenerateDebugInformation="false"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="1"
+				OutputFile="$(OutDir)\libwdi.dll"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -250,15 +231,14 @@
 		</Configuration>
 		<Configuration
 			Name="Release|x64"
-			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\examples"
-			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\examples\$(ProjectName)"
-			ConfigurationType="1"
-			CharacterSet="2"
-			WholeProgramOptimization="1"
-			BuildLogFile="$(IntDir)\$(ProjectName).htm"
+			OutputDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\dll"
+			IntermediateDirectory="$(SolutionDir)$(PlatformName)\$(ConfigurationName)\dll\libwdi"
+			ConfigurationType="2"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Embedding binary resources"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -271,25 +251,19 @@
 			/>
 			<Tool
 				Name="VCMIDLTool"
-				TargetEnvironment="3"
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="_CRT_SECURE_NO_WARNINGS"
-				RuntimeLibrary="0"
-				EnableFunctionLevelLinking="true"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				DebugInformationFormat="3"
+				AdditionalIncludeDirectories="..\msvc"
+				PreprocessorDefinitions="_WIN32;_WIN64;_LIB;_CRT_SECURE_NO_WARNINGS"
+				RuntimeLibrary="2"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
+				AdditionalIncludeDirectories="E:\WinDDK\7600.16385.0"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -297,13 +271,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="setupapi.lib newdev.lib"
-				LinkIncremental="1"
-				UACExecutionLevel="1"
-				GenerateDebugInformation="false"
-				SubSystem="2"
-				OptimizeReferences="2"
-				EnableCOMDATFolding="2"
-				TargetMachine="17"
+				OutputFile="$(OutDir)\libwdi.dll"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -337,7 +305,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\zadig.c"
+				RelativePath=".\libwdi.c"
+				>
+			</File>
+			<File
+				RelativePath=".\logging.c"
 				>
 			</File>
 		</Filter>
@@ -347,25 +319,31 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath="..\msvc\config.h"
 				>
 			</File>
 			<File
-				RelativePath=".\zadig.h"
+				RelativePath=".\infs.h"
+				>
+			</File>
+			<File
+				RelativePath=".\installer.h"
+				>
+			</File>
+			<File
+				RelativePath=".\libwdi.h"
+				>
+			</File>
+			<File
+				RelativePath=".\logging.h"
 				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath=".\icon1.ico"
-				>
-			</File>
-			<File
-				RelativePath=".\zadig.rc"
+				RelativePath=".\libwdi.rc"
 				>
 			</File>
 		</Filter>
