--- a/libwdi/libwdi_static_2008.vcproj
+++ b/libwdi/libwdi_static_2008.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="libwdi"
+	Name="libwdi (static)"
 	ProjectGUID="{9AA0E745-1A0A-4700-8ECB-6A6DE9DBF8B9}"
 	RootNamespace="libwdi"
 	TargetFrameworkVersion="196613"
@@ -28,7 +28,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\embedder $(InputDir)\resource.h"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -92,7 +92,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\embedder $(InputDir)\resource.h"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -153,7 +153,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\embedder $(InputDir)\resource.h"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -217,7 +217,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\embedder $(InputDir)\resource.h"
+				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\resource.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
