add clickable libwdi URL to About box

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -55,15 +55,17 @@ BEGIN
     EDITTEXT        IDC_INFO,13,158,388,110,ES_MULTILINE | ES_READONLY | WS_VSCROLL
 END
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 170, 62
+IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About Zadig"
 FONT 8, "Microsoft Sans Serif", 400, 0, 0x0
 BEGIN
     ICON            128,IDC_STATIC,14,14,20,20
     LTEXT           "Zadig, Version 1.0",IDC_STATIC,42,14,114,8,SS_NOPREFIX
-    LTEXT           "Copyright (c) 2010 Pete Batard",IDC_STATIC,42,26,114,8
-    DEFPUSHBUTTON   "OK",IDOK,113,41,50,14,WS_GROUP
+    LTEXT           "Copyright (c) 2010 Pete Batard",IDC_STATIC,41,40,114,8
+    DEFPUSHBUTTON   "OK",IDOK,167,72,50,14,WS_GROUP
+    LTEXT           "Part of the libwdi project:",IDC_STATIC,41,27,77,8,SS_NOPREFIX
+    LTEXT           "http://libusb.org/wiki/libwdi",IDC_URL,120,27,87,8,SS_NOPREFIX | SS_NOTIFY
 END
 
 
@@ -118,6 +120,12 @@ BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
         BOTTOMMARGIN, 273
+    END
+
+    IDD_ABOUTBOX, DIALOG
+    BEGIN
+        RIGHTMARGIN, 217
+        BOTTOMMARGIN, 62
     END
 END
 #endif    // APSTUDIO_INVOKED
