split standard dialog handling to separate file in zadig

--- a/examples/zadig_2008.vcproj
+++ b/examples/zadig_2008.vcproj
@@ -340,6 +340,10 @@
 				RelativePath=".\zadig.c"
 				>
 			</File>
+			<File
+				RelativePath=".\zadig_stdlg.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
