--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -26,33 +26,33 @@ LANGUAGE LANG_ENGLISH, SUBLANG_NEUTRAL
 // Dialog
 //
 
-MAIN_DIALOG DIALOGEX 0, 0, 417, 278
+MAIN_DIALOG DIALOGEX 0, 0, 404, 278
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Zadig"
 MENU IDR_MENU1
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
-    GROUPBOX        "Info",IDC_STATIC,8,148,399,125
-    GROUPBOX        "USB Device",IDC_STATIC,7,8,400,128
-    EDITTEXT        IDC_VID,292,31,27,14,ES_UPPERCASE | WS_DISABLED
-    EDITTEXT        IDC_PID,320,31,27,14,ES_UPPERCASE | WS_DISABLED
-    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,52,103,10
-    LTEXT           "VID:",IDC_STATIC,293,21,15,8
-    LTEXT           "PID:",IDC_STATIC,322,21,15,8
-    EDITTEXT        IDC_DRIVER,193,50,75,14,ES_READONLY | WS_DISABLED
-    LTEXT           "Current driver:",IDC_STATIC,139,52,51,8
-    PUSHBUTTON      "Install Driver",IDC_INSTALL,149,92,112,25
-    CONTROL         "Edit Device Name",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,66,71,10
-    LTEXT           "Extract Folder:",IDC_STATIC,139,70,51,8
-    EDITTEXT        IDC_FOLDER,193,68,115,14,ES_AUTOHSCROLL
-    CONTROL         "Create Device (Not Plugged)",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,81,107,10
-    LTEXT           "Description:",IDC_STATIC,19,21,39,8
-    LTEXT           "MI:",IDC_STATIC,352,21,12,8
-    EDITTEXT        IDC_MI,348,31,16,14,ES_UPPERCASE | WS_DISABLED
-    PUSHBUTTON      "Browse",IDC_BROWSE,315,68,50,14
-    COMBOBOX        IDC_DEVICELIST,17,31,273,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_INFO,13,158,388,110,ES_MULTILINE | ES_READONLY | WS_VSCROLL
+    GROUPBOX        "Info",IDC_STATIC,8,139,388,134
+    GROUPBOX        "USB Device",IDC_STATIC,8,6,388,82
+    EDITTEXT        IDC_VID,118,62,30,14,ES_UPPERCASE | WS_DISABLED
+    EDITTEXT        IDC_PID,152,62,26,14,ES_UPPERCASE | WS_DISABLED
+    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,97,103,10
+    LTEXT           "VID:",IDC_STATIC,119,52,15,8
+    LTEXT           "PID:",IDC_STATIC,154,52,15,8
+    EDITTEXT        IDC_DRIVER,20,62,94,14,ES_READONLY | WS_DISABLED
+    LTEXT           "Driver:",IDC_STATIC,21,52,23,8
+    PUSHBUTTON      "Install Driver",IDC_INSTALL,145,100,112,25
+    CONTROL         "Edit Device Name",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,110,71,10
+    EDITTEXT        IDC_FOLDER,220,62,120,14,ES_AUTOHSCROLL
+    CONTROL         "Create Device (Not Plugged)",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,123,107,10
+    LTEXT           "MI:",IDC_STATIC,184,52,12,8
+    EDITTEXT        IDC_MI,182,62,16,14,ES_UPPERCASE | WS_DISABLED
+    PUSHBUTTON      "Browse",IDC_BROWSE,342,62,39,14
+    COMBOBOX        IDC_DEVICELIST,20,31,362,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_INFO,13,150,376,118,ES_MULTILINE | ES_READONLY | WS_VSCROLL
+    LTEXT           "Description:",IDC_STATIC,21,20,37,8
+    LTEXT           "Extract files to:",IDC_STATIC,222,52,50,8
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
@@ -119,6 +119,7 @@ GUIDELINES DESIGNINFO
 BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
+        RIGHTMARGIN, 403
         BOTTOMMARGIN, 273
     END
 
