added clear log button - also simplified log printout

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -26,14 +26,14 @@ LANGUAGE LANG_ENGLISH, SUBLANG_NEUTRAL
 // Dialog
 //
 
-MAIN_DIALOG DIALOGEX 0, 0, 404, 278
+MAIN_DIALOG DIALOGEX 0, 0, 404, 301
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Zadig"
 MENU IDR_MENU1
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
-    GROUPBOX        "Info",IDC_STATIC,8,139,388,134
+    GROUPBOX        "Info",IDC_STATIC,8,140,388,147
     GROUPBOX        "USB Device",IDC_STATIC,8,6,388,82
     EDITTEXT        IDC_VID,118,62,30,14,ES_UPPERCASE | WS_DISABLED
     EDITTEXT        IDC_PID,152,62,26,14,ES_UPPERCASE | WS_DISABLED
@@ -53,6 +53,7 @@ BEGIN
     EDITTEXT        IDC_INFO,13,150,376,118,ES_MULTILINE | ES_READONLY | WS_VSCROLL
     LTEXT           "Description:",IDC_STATIC,21,20,37,8
     LTEXT           "Extract files to:",IDC_STATIC,222,52,50,8
+    PUSHBUTTON      "Clear Log",IDC_CLEAR,176,270,50,14
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
@@ -120,7 +121,7 @@ BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
         RIGHTMARGIN, 403
-        BOTTOMMARGIN, 273
+        BOTTOMMARGIN, 295
     END
 
     IDD_ABOUTBOX, DIALOG
@@ -190,6 +191,8 @@ BEGIN
     BEGIN
         MENUITEM "Basic Mode",                  IDM_BASICMODE
         MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE, CHECKED
+        MENUITEM "List Only Driverless Devices", ID_OPTIONS_LISTONLYDRIVERLESSDEVICES
+        MENUITEM "Create New Device",           ID_OPTIONS_CREATENEWDEVICE
     END
     POPUP "Help"
     BEGIN
