--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -37,23 +37,24 @@ BEGIN
     GROUPBOX        "USB Device",IDC_STATIC,8,6,388,82
     EDITTEXT        IDC_VID,118,62,30,14,ES_UPPERCASE | WS_DISABLED
     EDITTEXT        IDC_PID,152,62,26,14,ES_UPPERCASE | WS_DISABLED
-    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,97,103,10
+    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,100,103,10
     LTEXT           "VID:",IDC_STATIC,119,52,15,8
     LTEXT           "PID:",IDC_STATIC,154,52,15,8
     EDITTEXT        IDC_DRIVER,20,62,94,14,ES_READONLY | WS_DISABLED
     LTEXT           "Driver:",IDC_STATIC,21,52,23,8
     PUSHBUTTON      "Install Driver",IDC_INSTALL,145,100,112,25
-    CONTROL         "Edit Device Name",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,110,71,10
+    CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,343,33,43,10
     EDITTEXT        IDC_FOLDER,220,62,120,14,ES_AUTOHSCROLL
-    CONTROL         "Create Device (Not Plugged)",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,123,107,10
+    CONTROL         "Create New Device",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,114,77,10
     LTEXT           "MI:",IDC_STATIC,184,52,12,8
     EDITTEXT        IDC_MI,182,62,16,14,ES_UPPERCASE | WS_DISABLED
-    PUSHBUTTON      "Browse",IDC_BROWSE,342,62,39,14
-    COMBOBOX        IDC_DEVICELIST,20,31,362,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Browse",IDC_BROWSE,343,62,39,14
+    COMBOBOX        IDC_DEVICELIST,20,31,320,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
     EDITTEXT        IDC_INFO,13,150,376,118,ES_MULTILINE | ES_READONLY | WS_VSCROLL
     LTEXT           "Description:",IDC_STATIC,21,20,37,8
-    LTEXT           "Extract files to:",IDC_STATIC,222,52,50,8
-    PUSHBUTTON      "Clear Log",IDC_CLEAR,176,270,50,14
+    LTEXT           "Extract driver files to:",IDC_STATIC,222,52,101,8
+    PUSHBUTTON      "Clear Log",IDC_CLEAR,149,271,50,14
+    PUSHBUTTON      "Save Log",IDC_SAVE,204,271,50,14
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
@@ -191,8 +192,6 @@ BEGIN
     BEGIN
         MENUITEM "Basic Mode",                  IDM_BASICMODE
         MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE, CHECKED
-        MENUITEM "List Only Driverless Devices", ID_OPTIONS_LISTONLYDRIVERLESSDEVICES
-        MENUITEM "Create New Device",           ID_OPTIONS_CREATENEWDEVICE
     END
     POPUP "Help"
     BEGIN
