provisions to extract driver files only
plus other small improvements

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -37,7 +37,7 @@ BEGIN
     GROUPBOX        "USB Device",IDC_STATIC,8,6,388,82
     EDITTEXT        IDC_VID,130,62,30,14,ES_UPPERCASE | WS_DISABLED
     EDITTEXT        IDC_PID,164,62,26,14,ES_UPPERCASE | WS_DISABLED
-    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,100,103,10
+    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,97,103,10
     LTEXT           "VID:",IDC_STATIC,131,52,15,8
     LTEXT           "PID:",IDC_STATIC,166,52,15,8
     EDITTEXT        IDC_DRIVER,20,62,41,14,ES_READONLY | WS_DISABLED
@@ -45,7 +45,7 @@ BEGIN
     PUSHBUTTON      "Install Driver",IDC_INSTALL,145,100,112,25
     CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,343,33,43,10
     EDITTEXT        IDC_FOLDER,220,62,120,14,ES_AUTOHSCROLL
-    CONTROL         "Create New Device",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,114,77,10
+    CONTROL         "Create New Device",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,111,77,10
     LTEXT           "MI:",IDC_STATIC,196,52,12,8
     EDITTEXT        IDC_MI,194,62,16,14,ES_UPPERCASE | WS_DISABLED
     PUSHBUTTON      "Browse...",IDC_BROWSE,343,62,39,14
@@ -58,6 +58,7 @@ BEGIN
     CONTROL         "",IDC_DRIVERSPIN,"msctls_updown32",UDS_ARROWKEYS,107,62,11,14
     EDITTEXT        IDC_TARGET_DRIVER,71,62,36,14,ES_READONLY | WS_DISABLED
     LTEXT           "->",IDC_STATIC,62,65,8,8
+    CONTROL         "Extract driver files only",IDC_EXTRACTONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,125,90,10
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
