added hiding of MI field when not needed

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -46,7 +46,7 @@ BEGIN
     CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,343,33,43,10
     EDITTEXT        IDC_FOLDER,220,62,120,14,ES_AUTOHSCROLL
     CONTROL         "Create New Device",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,111,77,10
-    LTEXT           "MI:",IDC_STATIC,196,52,12,8
+    LTEXT           "MI:",IDC_STATIC_MI,196,52,12,8
     EDITTEXT        IDC_MI,194,62,16,14,ES_UPPERCASE | WS_DISABLED
     PUSHBUTTON      "Browse...",IDC_BROWSE,343,62,39,14
     COMBOBOX        IDC_DEVICELIST,20,31,320,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
