--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -26,39 +26,38 @@ LANGUAGE LANG_ENGLISH, SUBLANG_NEUTRAL
 // Dialog
 //
 
-MAIN_DIALOG DIALOGEX 0, 0, 404, 301
+MAIN_DIALOG DIALOGEX 0, 0, 407, 368
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Zadig"
 MENU IDR_MENU1
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
-    GROUPBOX        "Info",IDC_STATIC,8,140,388,147
-    GROUPBOX        "USB Device",IDC_STATIC,8,6,388,82
-    EDITTEXT        IDC_VID,130,62,30,14,ES_UPPERCASE | WS_DISABLED
-    EDITTEXT        IDC_PID,164,62,26,14,ES_UPPERCASE | WS_DISABLED
-    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,97,103,10
-    LTEXT           "VID:",IDC_STATIC,131,52,15,8
-    LTEXT           "PID:",IDC_STATIC,166,52,15,8
-    EDITTEXT        IDC_DRIVER,20,62,41,14,ES_READONLY | WS_DISABLED
-    LTEXT           "Driver:",IDC_STATIC,21,52,23,8
-    PUSHBUTTON      "Install Driver",IDC_INSTALL,145,100,112,25
-    CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,343,33,43,10
-    EDITTEXT        IDC_FOLDER,220,62,120,14,ES_AUTOHSCROLL
-    CONTROL         "Create New Device",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,111,77,10
-    LTEXT           "MI:",IDC_STATIC_MI,196,52,12,8
-    EDITTEXT        IDC_MI,194,62,16,14,ES_UPPERCASE | WS_DISABLED
-    PUSHBUTTON      "Browse...",IDC_BROWSE,343,62,39,14
-    COMBOBOX        IDC_DEVICELIST,20,31,320,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_INFO,13,150,376,118,ES_MULTILINE | ES_READONLY | WS_VSCROLL
-    LTEXT           "Description:",IDC_STATIC,21,20,37,8
-    LTEXT           "Extract driver files to:",IDC_STATIC_FOLDER,222,52,101,8
-    PUSHBUTTON      "Clear Log",IDC_CLEAR,149,271,50,14
-    PUSHBUTTON      "Save Log",IDC_SAVE,204,271,50,14
-    CONTROL         "",IDC_DRIVERSPIN,"msctls_updown32",UDS_ARROWKEYS,107,62,11,14
-    EDITTEXT        IDC_TARGET_DRIVER,71,62,36,14,ES_READONLY | WS_DISABLED
-    LTEXT           "->",IDC_STATIC,62,65,8,8
-    CONTROL         "Extract driver files only",IDC_EXTRACTONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,125,90,10
+    GROUPBOX        "Info",IDC_STATIC,8,163,392,197
+    GROUPBOX        "USB Device",IDC_STATIC,8,6,391,58
+    EDITTEXT        IDC_VID,57,41,30,14,ES_UPPERCASE | WS_DISABLED
+    EDITTEXT        IDC_PID,129,41,29,14,ES_UPPERCASE | WS_DISABLED
+    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,293,113,103,10
+    LTEXT           "Vendor ID:",IDC_STATIC,21,43,36,8
+    LTEXT           "Product ID:",IDC_STATIC,91,43,38,8
+    EDITTEXT        IDC_DRIVER,278,41,65,14,ES_READONLY | WS_DISABLED
+    LTEXT           "Current Driver:",IDC_STATIC,227,43,50,8
+    PUSHBUTTON      "Install Driver",IDC_INSTALL,136,117,135,40
+    CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,347,23,47,10
+    EDITTEXT        IDC_FOLDER,140,81,131,14,ES_AUTOHSCROLL
+    CONTROL         "Create New Device",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,326,74,77,10
+    LTEXT           "Interface ID:",IDC_STATIC_MI,162,43,43,8
+    EDITTEXT        IDC_MI,207,41,16,14,ES_UPPERCASE | WS_DISABLED
+    PUSHBUTTON      "Browse...",IDC_BROWSE,271,81,39,14
+    COMBOBOX        IDC_DEVICELIST,20,20,323,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_INFO,13,175,376,160,ES_MULTILINE | ES_READONLY | WS_VSCROLL
+    PUSHBUTTON      "Clear Log",IDC_CLEAR,149,341,50,14
+    PUSHBUTTON      "Save Log",IDC_SAVE,204,341,50,14
+    CONTROL         "",IDC_TARGETSPIN,"msctls_updown32",UDS_ARROWKEYS,104,81,11,14,WS_EX_TRANSPARENT
+    EDITTEXT        IDC_TARGET,20,81,84,14,ES_READONLY | WS_DISABLED
+    CONTROL         "Extract Files Only",IDC_EXTRACTONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,326,88,71,10
+    GROUPBOX        "Target Driver",IDC_STATIC_TARGET,8,68,118,35
+    GROUPBOX        "Extract To:",IDC_STATIC_FOLDER,133,68,186,35
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
@@ -125,8 +124,8 @@ GUIDELINES DESIGNINFO
 BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
-        RIGHTMARGIN, 403
-        BOTTOMMARGIN, 295
+        RIGHTMARGIN, 405
+        BOTTOMMARGIN, 360
     END
 
     IDD_ABOUTBOX, DIALOG
@@ -194,7 +193,7 @@ IDR_MENU1 MENU
 BEGIN
     POPUP "Options"
     BEGIN
-        MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE, CHECKED
+        MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE
     END
     POPUP "Help"
     BEGIN
