moved "list driverless only" option to menu

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -37,11 +37,10 @@ BEGIN
     GROUPBOX        "USB Device",IDC_STATIC,8,6,391,58
     EDITTEXT        IDC_VID,57,41,30,14,ES_UPPERCASE | WS_DISABLED
     EDITTEXT        IDC_PID,129,41,29,14,ES_UPPERCASE | WS_DISABLED
-    CONTROL         "List Only Driverless Devices",IDC_DRIVERLESSONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,293,113,103,10
     LTEXT           "Vendor ID:",IDC_STATIC,21,43,36,8
     LTEXT           "Product ID:",IDC_STATIC,91,43,38,8
     EDITTEXT        IDC_DRIVER,278,41,65,14,ES_READONLY | WS_DISABLED
-    LTEXT           "Current Driver:",IDC_STATIC,227,43,50,8
+    LTEXT           "Current Driver:",IDC_STATIC_DRIVER,227,43,50,8
     PUSHBUTTON      "Install Driver",IDC_INSTALL,136,117,135,40
     CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,347,23,47,10
     EDITTEXT        IDC_FOLDER,140,81,131,14,ES_AUTOHSCROLL
@@ -193,6 +192,7 @@ IDR_MENU1 MENU
 BEGIN
     POPUP "Options"
     BEGIN
+        MENUITEM "List Only Driverless Devices", IDM_DRIVERLESSONLY, CHECKED
         MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE
     END
     POPUP "Help"
