more GUI application improvements

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -26,14 +26,14 @@ LANGUAGE LANG_ENGLISH, SUBLANG_NEUTRAL
 // Dialog
 //
 
-MAIN_DIALOG DIALOGEX 0, 0, 407, 368
+MAIN_DIALOG DIALOGEX 0, 0, 407, 361
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Zadig"
 MENU IDR_MENU1
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
-    GROUPBOX        "Info",IDC_STATIC,8,163,392,197
+    GROUPBOX        "Info",IDC_STATIC,8,158,392,197
     GROUPBOX        "USB Device",IDC_STATIC,8,6,391,58
     EDITTEXT        IDC_VID,57,41,30,14,ES_UPPERCASE | WS_DISABLED
     EDITTEXT        IDC_PID,129,41,29,14,ES_UPPERCASE | WS_DISABLED
@@ -41,22 +41,20 @@ BEGIN
     LTEXT           "Product ID:",IDC_STATIC,91,43,38,8
     EDITTEXT        IDC_DRIVER,278,41,65,14,ES_READONLY | WS_DISABLED
     LTEXT           "Current Driver:",IDC_STATIC_DRIVER,227,43,50,8
-    PUSHBUTTON      "Install Driver",IDC_INSTALL,136,117,135,40
+    PUSHBUTTON      "Install Driver",IDC_INSTALL,136,112,135,40
     CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,347,23,47,10
-    EDITTEXT        IDC_FOLDER,140,81,131,14,ES_AUTOHSCROLL
-    CONTROL         "Create New Device",IDC_CREATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,326,74,77,10
+    EDITTEXT        IDC_FOLDER,147,81,196,14,ES_AUTOHSCROLL
     LTEXT           "Interface ID:",IDC_STATIC_MI,162,43,43,8
     EDITTEXT        IDC_MI,207,41,16,14,ES_UPPERCASE | WS_DISABLED
-    PUSHBUTTON      "Browse...",IDC_BROWSE,271,81,39,14
+    PUSHBUTTON      "Browse...",IDC_BROWSE,347,81,39,14
     COMBOBOX        IDC_DEVICELIST,20,20,323,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_INFO,13,175,376,160,ES_MULTILINE | ES_READONLY | WS_VSCROLL
-    PUSHBUTTON      "Clear Log",IDC_CLEAR,149,341,50,14
-    PUSHBUTTON      "Save Log",IDC_SAVE,204,341,50,14
+    EDITTEXT        IDC_INFO,13,170,376,160,ES_MULTILINE | ES_READONLY | WS_VSCROLL
+    PUSHBUTTON      "Clear Log",IDC_CLEAR,149,336,50,14
+    PUSHBUTTON      "Save Log",IDC_SAVE,204,336,50,14
     CONTROL         "",IDC_TARGETSPIN,"msctls_updown32",UDS_ARROWKEYS,104,81,11,14,WS_EX_TRANSPARENT
     EDITTEXT        IDC_TARGET,20,81,84,14,ES_READONLY | WS_DISABLED
-    CONTROL         "Extract Files Only",IDC_EXTRACTONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,326,88,71,10
     GROUPBOX        "Target Driver",IDC_STATIC_TARGET,8,68,118,35
-    GROUPBOX        "Extract To:",IDC_STATIC_FOLDER,133,68,186,35
+    GROUPBOX        "Extract To:",IDC_STATIC_FOLDER,136,68,263,35
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
@@ -124,7 +122,7 @@ BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
         RIGHTMARGIN, 405
-        BOTTOMMARGIN, 360
+        BOTTOMMARGIN, 358
     END
 
     IDD_ABOUTBOX, DIALOG
@@ -190,13 +188,20 @@ IDI_ICON1               ICON                    "icon1.ico"
 
 IDR_MENU1 MENU 
 BEGIN
+    POPUP "Device"
+    BEGIN
+        MENUITEM "Create New",                  IDM_CREATE
+        MENUITEM "Open Preselected",            IDM_OPEN
+    END
     POPUP "Options"
     BEGIN
         MENUITEM "List Only Driverless Devices", IDM_DRIVERLESSONLY, CHECKED
+        MENUITEM "Extract files only",          IDM_EXTRACT
         MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE
     END
     POPUP "Help"
     BEGIN
+        MENUITEM "Online Help",                 IDM_ONLINEHELP
         MENUITEM "About",                       IDM_ABOUT
     END
 END
