--- a/examples/zadic.rc
+++ b/examples/zadic.rc
@@ -35,3 +35,9 @@ BEGIN
         VALUE "Translation", 0x9, 1200
     END
 END
+
+// Must reference a manifest for visual styles and elevation
+// Oh, and it must happen here, or MinGW will ignore it!
+#if defined(__MINGW32__) || defined(__CYGWIN__)
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "zadic.manifest"
+#endif
