zadig code readability and minor UI improvements

--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -26,7 +26,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_NEUTRAL
 // Dialog
 //
 
-MAIN_DIALOG DIALOGEX 0, 0, 407, 369
+MAIN_DIALOG DIALOGEX 0, 0, 407, 365
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_NOFAILCREATE | DS_CENTER | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Zadig"
@@ -122,7 +122,7 @@ BEGIN
     "MAIN_DIALOG", DIALOG
     BEGIN
         RIGHTMARGIN, 406
-        BOTTOMMARGIN, 349
+        BOTTOMMARGIN, 345
     END
 
     IDD_ABOUTBOX, DIALOG
@@ -202,7 +202,7 @@ BEGIN
     BEGIN
         MENUITEM "List Only Driverless Devices", IDM_DRIVERLESSONLY, CHECKED
         MENUITEM "Extract files only",          IDM_EXTRACT
-        MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE
+        MENUITEM "Advanced Mode",               IDM_ADVANCEDMODE, CHECKED
     END
     POPUP "Help"
     BEGIN
