--- a/examples/zadig.rc
+++ b/examples/zadig.rc
@@ -34,27 +34,28 @@ MENU IDR_MENU1
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
     GROUPBOX        "Info",IDC_STATIC,8,146,392,197
-    GROUPBOX        "USB Device",IDC_STATIC,8,6,391,58
-    EDITTEXT        IDC_VID,57,41,30,14,ES_UPPERCASE | WS_DISABLED
-    EDITTEXT        IDC_PID,129,41,29,14,ES_UPPERCASE | WS_DISABLED
+    GROUPBOX        "USB Device",IDC_STATIC,8,4,391,58
+    EDITTEXT        IDC_VID,57,41,30,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
+    EDITTEXT        IDC_PID,129,41,29,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     LTEXT           "Vendor ID:",IDC_STATIC,21,43,36,8
     LTEXT           "Product ID:",IDC_STATIC,91,43,38,8
-    EDITTEXT        IDC_DRIVER,278,41,65,14,ES_READONLY | WS_DISABLED
+    EDITTEXT        IDC_DRIVER,278,41,65,14,ES_READONLY | NOT WS_TABSTOP
     LTEXT           "Current Driver:",IDC_STATIC_DRIVER,227,43,50,8
     PUSHBUTTON      "Install Driver",IDC_INSTALL,152,112,103,29
     CONTROL         "Edit Desc.",IDC_EDITNAME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,347,23,47,10
     EDITTEXT        IDC_FOLDER,163,81,180,14,ES_AUTOHSCROLL
     LTEXT           "Interface ID:",IDC_STATIC_MI,162,43,43,8
-    EDITTEXT        IDC_MI,207,41,16,14,ES_UPPERCASE | WS_DISABLED
+    EDITTEXT        IDC_MI,207,41,16,14,ES_UPPERCASE | ES_READONLY | NOT WS_TABSTOP
     PUSHBUTTON      "Browse...",IDC_BROWSE,347,81,39,14
-    COMBOBOX        IDC_DEVICELIST,20,20,323,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_DEVICELIST,20,21,323,88,CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP
     EDITTEXT        IDC_INFO,13,158,376,160,ES_MULTILINE | ES_READONLY | WS_VSCROLL
     PUSHBUTTON      "Clear Log",IDC_CLEAR,151,323,50,14
     PUSHBUTTON      "Save Log",IDC_SAVE,206,323,50,14
     CONTROL         "",IDC_TARGETSPIN,"msctls_updown32",UDS_ARROWKEYS,120,81,11,14,WS_EX_TRANSPARENT
-    EDITTEXT        IDC_TARGET,20,81,100,14,ES_READONLY | WS_DISABLED
+    EDITTEXT        IDC_TARGET,20,81,100,14,ES_READONLY | NOT WS_TABSTOP
     GROUPBOX        "Target Driver",IDC_STATIC_TARGET,8,68,134,35
     GROUPBOX        "Extract To:",IDC_STATIC_FOLDER,152,68,247,35
+    EDITTEXT        IDC_DEVICEEDIT,20,21,323,14,NOT WS_VISIBLE | NOT WS_TABSTOP
 END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 223, 91
