added libconfig sources dependencies for zadig
These sources were modified from http://www.hyperrealm.com/libconfig
to fix 64 bit/DDK compiling and simplify integration with our examples.

--- a/configure.ac
+++ b/configure.ac
@@ -221,5 +221,5 @@ AC_SUBST(AM_CFLAGS)
 AC_SUBST(AM_LDFLAGS)
 AC_SUBST(NO_CYGWIN)
 
-AC_CONFIG_FILES([Makefile] [libwdi/Makefile] [examples/Makefile])
+AC_CONFIG_FILES([Makefile] [libwdi/Makefile] [examples/libconfig/Makefile] [examples/Makefile])
 AC_OUTPUT
