fixed ddk_build output for Makefile.hide
also fixed typo in sample.cfg

--- a/examples/sample.cfg
+++ b/examples/sample.cfg
@@ -1,4 +1,4 @@
-// This is a samble preset device configuration for Zadig
+// This is a sample preset device configuration for Zadig
 
 device = {
   Description = "Sample Device";
